# GraphATC

./: .gitignore  README.md  pyproject.toml  requirements.txt
graphatc/: __init__.py  evaluater.py  get_eval.py  model.py  modules.py  run.py  trainer.py  util.py
graphatc/dataset/: __init__.py  data_loader.py  graph_dataset.py  uni_dataset.py
graphatc/dataset/atc/: br08303_drug_atc_5724_5311.json  br08303_drug_atc_5841_5384.json  br08303_drug_atc_raw_5724_5311.json  br08303_drug_atc_raw_5841_5384.json  download_br08303_drug_atc_json.py  drugatc.py
graphatc/dataset/atc-smiles-4545/: ATC_SMILES.csv
graphatc/dataset/chen3883/: chen3883.py  chen3883_kegg_drug_id.txt  chen3883_multihot.csv  del_l2_null_drug_id.txt  fix_chen_11.csv  fix_up_to_3875_19_drug_id.txt
graphatc/dataset/common/: __init__.py  client.py  const.py  featurizer.py  util.py
graphatc/dataset/drug_group/: br08330_drug_group.json  dgroup.py
graphatc/dataset/flat/: download_compound_flat_file.py  download_drug_flat_file.py  flat.py
graphatc/dataset/kegg/: keggbr.py
graphatc/dataset/log/: log.get_mol_by_id.type.peptide  log.get_mol_map.skip  log.peptide.protine.hasmol
graphatc/dataset/mol/: __init__.py  check_mol.py  check_polymer_diff.py  check_special.py  download_drug_id_list.py  download_drug_mol.py  download_special_mol_img.py  drug_id_name.csv  drugid_list.txt  mol.py  test.mol
graphatc/metric/: __init__.py  get_metric.py  metric_util.py
scripts/eval/: eval_GraphATC_L1.sh  eval_GraphATC_L2.sh
scripts/train/: train_GraphATC_L1.sh  train_GraphATC_L2.sh
(+23378 files in other folders)
