[project]
name = "graphatc"
version = "0.0.1"
dependencies = ['importlib-metadata; python_version=="3.10"']

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]                # ["."] by default
include = ["graphatc"]       # ["*"] by default
exclude = [""] # empty by default
namespaces = false             # true by default
